[package]
name = "tower-consul"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
futures = "0.1"
http = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-buffer = { git = "https://github.com/tower-rs/tower" }
tower-http-service = { git ="https://github.com/tower-rs/tower-http" }
#tower-service = { git ="https://github.com/tower-rs/tower" }

[dev-dependencies]
hyper = "0.12"
tokio = "0.1"
tower-util = { git = "https://github.com/tower-rs/tower" }

[patch.crates-io]
tower-service = { git ="https://github.com/tower-rs/tower" }