[package]
name = "tower-consul"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "^0.4"
futures = "^0.1"
http = "^0.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tower-buffer = "^0.1"
tower-http-util = "^0.1"
tower-util = "^0.1"

[dev-dependencies]
hyper = "0.12"
tokio = "0.1"
tower = "^0.1"